--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+:root {
+    --fonte-padrao: 'Inter', sans-serif;
+    --azul-primario: #0A3871;
+    --cinza-claro: #495057;
+    --cinza-escuro: #343A40;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,82 +14,72 @@
 }
 
 .container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    min-height: 100vh;
-    display: flex;
-    background-color: #E5E5E5;
-    flex-direction: column;
     justify-content: space-between;
-    overflow-x: hidden;
+    background-color: #E5E5E5;
 }
 
-.container__main {
-    padding: 40px;    
+.conteudo {
+    padding: 40px;
     display: flex;
-    gap: 40px;
-    background-color: #E5E5E5;
-    flex-wrap: nowrap;
+    gap: 43px;
+    width: 100%
     
 }
 
-.img_alura img {
-    width: 120px;
-    height: 48px;
-}
 
-.container__pesquisa {
-    
-    width: 680px;
+.conteudo__principal {
+    height: calc(100vh - 145px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 16px;
+    gap: 1em;
+    flex: 1 0 680px;
+    padding-bottom: 28px;
 }
 
-.container__pesquisa .input-texto {
+
+.conteudo .primeiro-texto {
     width: 100%;
     height: 100%;
     border: 1px solid #0A3871;
     border-radius: 32px;
     outline: none;
     background-color: transparent;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--fonte-padrao);
     font-size: 2rem;
-    color: #0A3871;
+    color: var(--azul-primario);
     font-weight: 300;
-    margin-top: 128px;
+    margin-top: 60px;
     padding: 24px 
 }
 
-.container__pesquisa__btns {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    margin-bottom: 32px;
-}
-
-.container__pesquisa__btns span {
-    color: #495057;
-    font-family: 'Inter', sans-serif;
-    font-weight: 300;
+.conteudo span {
     font-size: 0.75rem;
+    font-family: var(--fonte-padrao);
+    color: var(--cinza-claro);
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.container__pesquisa__btns span iconify-icon {
-    width: 16px;
+.conteudo .btns {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
-.container__pesquisa__btns__btn {
+.layout-btns {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 24px
 }
 
-.btns {
+.padrao-btn {
     padding: 24px;
     font-family: 'Inter', sans-serif;
     font-size: 1rem;
@@ -93,101 +90,91 @@
     cursor: pointer;
 }
 
-.cript {
-    background-color: #0A3871;
-    color: #FFFFFF;
+.btn-cript {
+    background-color: var(--azul-primario);
+    color: #FFFFFF
 }
 
-.btn-desabled {
-    background-color: slategrey;
-    border: none;
-}
-
-.container__pesquisa__btns__btn button:nth-child(2) {
+.btn-descript {
     background-color: #D8DFE8;
-    color: #0A3871;
+    color: var(--azul-primario);
 }
 
-.container__resultado {
+.conteudo__resultado {
     background-color: #FFFFFF;
-    border-radius: 32px;
     flex: 0 1 400px;
+    border-radius: 32px;
     padding: 32px;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+}
+
+.container-resultado {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.container__resultado__conteudo {
+.conteudo__resultado img {
+    width: 262px;
+}
+
+.msg-resultado {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 32px 
-}
-
-.container__resultado__conteudo img {
-    width: 336px;
-    height: 304px;
-}
-
-.container__resultado__texto > div {
-    display: flex;
-    flex-direction: column;
+    text-align: center;
     gap: 16px;
 }
 
-.container__resultado__texto > div span:nth-child(1) {
-    font-family: 'Inter', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #343A40;
-    text-align: center;
-    line-height: 28.8px;
+.msg-resultado span:nth-child(1) {
+    font-family: var(--fonte-padrao);
+    font-weight: bold;
+    font-size: 2rem;
 }
 
-.container__resultado__texto > div span:nth-child(2) {
-    font-family: 'Inter', sans-serif;
+.msg-resultado span:nth-child(2) {
+    font-family: var(--fonte-padrao);
     font-size: 1rem;
-    font-weight: 400;
-    color: #495057;
-    text-align: center;
-    line-height: 24px;
 }
 
-.decrip-encrip {
+.container-result-cript {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
     gap: 32px;
 }
 
-.decrip-encrip .textarea-resultado {
-    height: 100%;
+.container-result-cript textarea {
     width: 100%;
-    outline: none;
+    height: 100%;
     border: none;
-    color: #495057;
+    outline: none;
+    font-family: var(--fonte-padrao);
     font-size: 1.5rem ;
+    color: var(--cinza-claro);
+    
     font-weight: 400;
-    font-family: 'Inter', sans-serif;
 }
 
 .btn-copiar {
     background-color: transparent;
-    color: #0A3871;
 }
 
-
-footer {
+.container .rodape {
     flex-basis: 64px;
-    background-color: #0A3871;
-    color: #D8DFE8;
-    font-family: 'Inter', sans-serif;
-    font-size: 1.3rem;
-    font-weight: 300;
+    background-color: var(--azul-primario);
+    color: aliceblue;
+    font-size: 1rem;
+    font-family: var(--fonte-padrao);
+    width: 100%;
     text-align: center;
     line-height: 64px;
-    width: 100%;
 }
+
