--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: #E5E5E5;
+    background-color: #F3F5FC;
 }
 
 .conteudo {
