--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,3 +178,84 @@
     line-height: 64px;
 }
 
+@media(max-width: 375px) {
+    .container {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #F3F5FC;
+    }
+
+    .conteudo {
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        gap: 43px;
+        width: 100%;
+        background-color: aliceblue;
+    }
+
+    .conteudo__principal {
+        height: calc(100vh - 145px);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 1em;
+        flex: 1 0 343px;
+        padding-bottom: 28px;
+    }
+    
+    .conteudo .primeiro-texto {
+        width: 100%;
+        height: 100%;
+        border: 1px solid #0A3871;
+        border-radius: 32px;
+        outline: none;
+        background-color: transparent;
+        font-family: var(--fonte-padrao);
+        font-size: 2rem;
+        color: var(--azul-primario);
+        font-weight: 300;
+        margin-top: 60px;
+        padding: 24px;
+    }
+    
+    .conteudo .btns {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        align-items: center;
+    }
+
+    .layout-btns {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 24px;
+    }
+
+    .conteudo__resultado {
+        background-color: #FFFFFF;
+        flex: 0 1 auto;
+        border-radius: 32px;
+        padding: 32px;
+    }
+
+    .container-resultado {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    img:nth-child(2) {
+        display: none;
+    }
+
+}
+
+
