--- a/styles/styles.css
+++ b/styles/styles.css
@@ -178,7 +178,7 @@
     line-height: 64px;
 }
 
-@media(max-width: 375px) {
+@media(max-width: 450px) {
     .container {
         height: 100vh;
         width: 100vw;
@@ -252,7 +252,7 @@
         justify-content: center;
     }
 
-    img:nth-child(2) {
+    #img-resultado {
         display: none;
     }
 
